# cpp-to-js.minigame

./: .gitignore  CMakeLists.txt  debian-setup.sh  emscripten.sh
src/: main.cpp
src/audio/: audio.cpp  openal.cpp  vorbis.cpp
src/game/: dialog.cpp  game.cpp  intro.cpp  level1.cpp  level2.cpp  level3.cpp  level4.cpp
src/graphics/: font.cpp  opengl.cpp  texture.cpp  window.cpp
src/include/: audio.h  dialog.h  font.h  game.h  level.h  openal.h  opengl.h  scene.h  texture.h  vorbis.h  window.h
